fixed grandmaster overflow

--- a/css/agency.css
+++ b/css/agency.css
@@ -358,7 +358,7 @@ section {
 section h2.section-heading {
     margin-top: 0;
     margin-bottom: 15px;
-    font-size: 40px;
+    font-size: 33px;
 }
 
 section h3.section-subheading {
